<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scroller"
    android:background="@color/green_100"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/small_margin"
        android:gravity="left"
        >
        
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_mode"
        android:padding="@dimen/small_margin"
        />
        
        <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/map_mode"/>
        
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dis_units"
        android:padding="@dimen/small_margin"
        />

        <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/units"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brng_units"
            android:padding="@dimen/small_margin"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brng_units"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ret_color"
            android:padding="@dimen/small_margin"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ret_color"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ret_size"
        android:padding="@dimen/small_margin"
        />
        
        <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ret_size"/>
        

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bearing"
        android:padding="@dimen/small_margin"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bearing"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geo_units"
            android:padding="@dimen/small_margin"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/geo_units"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nRange Card Pro\nVersion 2.0\n   "
            android:padding="@dimen/small_margin"
            android:textColor="@color/azure"
            />

    </LinearLayout>
    </ScrollView>
